# CubiCAD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _allocation_handler_8cpp.html  _allocation_handler_8cpp__incl.map  _allocation_handler_8cpp__incl.md5  _allocation_handler_8h.html  _allocation_handler_8h.js  _allocation_handler_8h__dep__incl.map  _allocation_handler_8h__dep__incl.md5  _allocation_handler_8h__incl.map  _allocation_handler_8h__incl.md5  _allocation_handler_8h_source.html  _lib_morton_8h.html  _lib_morton_8h.js  _lib_morton_8h__dep__incl.map  _lib_morton_8h__dep__incl.md5  _lib_morton_8h__incl.map  _lib_morton_8h__incl.md5  _lib_morton_8h_source.html  _voxel_codec_base_8h.html  _voxel_codec_base_8h.js  _voxel_codec_base_8h__dep__incl.map  _voxel_codec_base_8h__dep__incl.md5  _voxel_codec_base_8h__incl.map  _voxel_codec_base_8h__incl.md5  _voxel_codec_base_8h_source.html  _voxel_codec_linear_8h.html  _voxel_codec_linear_8h.js  _voxel_codec_linear_8h__dep__incl.map  _voxel_codec_linear_8h__dep__incl.md5  _voxel_codec_linear_8h__incl.map  _voxel_codec_linear_8h__incl.md5  _voxel_codec_linear_8h_a97dd2723d9aa5ae9b0b55db08968a87f_icgraph.map  _voxel_codec_linear_8h_a97dd2723d9aa5ae9b0b55db08968a87f_icgraph.md5  _voxel_codec_linear_8h_source.html  _voxel_codec_octree_base_8h.html  _voxel_codec_octree_base_8h.js  _voxel_codec_octree_base_8h__dep__incl.map  (+3110 more)
.github/workflows/: main.yml
captures/: swapchain_crash.rdc
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalysis.cmake
docs/: CMakeLists.txt  Doxyfile.in
lib/: CMakeLists.txt
resources/models/demo/: README.md
resources/models/demo/Exterior/: exterior.mtl
resources/models/demo/San_Miguel/: license.txt  san-miguel-low-poly.mtl  san-miguel.mtl
resources/models/demo/erato/: erato-1.mtl
resources/models/demo/salle_de_bain/: salle_de_bain.mtl
resources/models/demo/viking-room/: viking-room.mtl
resources/saves/: test.ccs
resources/shaders/: PBR_basic.frag  PBR_basic.vert  alchemy_ssao.comp  blur.comp  compile.sh  culling_indirect.comp  frag_uv.spv  horizontal_blur.comp  quad.vert  uv.frag  vert_quad.spv  viewport_selector.frag
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+94 more)
src/math/: vec_abs.cpp  vec_abs.h
src/math/octree/: octree.cpp  octree.h  octreecompiler.cpp  octreecompiler.h
src/renderer/: camera.cpp  camera.h  descriptorpoolmanager.cpp  descriptorpoolmanager.h  dynamicbuffer.cpp  dynamicbuffer.h  eventbus.cpp  eventbus.h  framebufferselector.cpp  framebufferselector.h  mastermaterial.cpp  mastermaterial.h  mastermaterialtemplate.cpp  mastermaterialtemplate.h  material.cpp  material.h  materiallibrary.cpp  materiallibrary.h  materialparameters.cpp  materialparameters.h  mesh.cpp  mesh.h  meshinstance.cpp  meshinstance.h  meshlibrary.cpp  meshlibrary.h  modelloader.cpp  modelloader.h  objectinstance.cpp  objectinstance.h  objectselector.cpp  objectselector.h  rendermanager.cpp  rendermanager.h  scene.cpp  scene.h  scenewriter.cpp  scenewriter.h  shadingpipeline.cpp  shadingpipeline.h  (+6 more)
src/renderer/ui/: mainmenu.cpp  mainmenu.h  objectlist.cpp  objectlist.h  objectproperties.cpp  objectproperties.h  uirenderer.cpp  uirenderer.h
src/renderer/vulkan/: application.cpp  application.h  buffer.cpp  buffer.h  bufferview.cpp  bufferview.h  commandbuffer.cpp  commandbuffer.h  commandpool.cpp  commandpool.h  computepipeline.cpp  computepipeline.h  descriptorlayout.cpp  descriptorlayout.h  descriptorpool.cpp  descriptorpool.h  descriptorset.cpp  descriptorset.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  graphicspipeline.cpp  graphicspipeline.h  hardwareinterface.cpp  hardwareinterface.h  image.cpp  image.h  imageview.cpp  imageview.h  instance.cpp  instance.h  physicaldevice.cpp  physicaldevice.h  pipelinebase.cpp  pipelinebase.h  pipelinelayout.cpp  pipelinelayout.h  (+21 more)
src/tests/: main.cpp  memory_allocation.cpp  octrees.cpp  vectors.cpp  voxels.cpp  vulkan_voxel_rasterizer.cpp  vulkan_voxel_rasterizer_2.cpp  vulkan_voxel_rasterizer_3.cpp  vulkan_voxel_rasterizer_4.cpp
src/utils/: utils.cpp  utils.h
src/voxel/: AllocationHandler.cpp  AllocationHandler.h  LibMorton.h  VoxelCodecBase.h  VoxelCodecLinear.h  VoxelCodecOctreeBase.h  VoxelCodecShuffle.h  VoxelCodecSparseOctree.h  VoxelFragmentStream.h  VoxelFragmentTypes.h  VoxelUtils.h
